--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </ul>
         </div>
 
-        <h3 class="what-we-provide gradient title">For the student from the student of the student</h3>
+        <h3 class="what-we-provide gradient title">For The Students And By The Students</h3>
 
   
 
