--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
         </nav>
-        <a href="./join/" class="join-up btn-join">Join</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEQW2VcUJWUWFjW_B60yDAPdDgzdybJFrrDQEqmmXjeXEsnQ/viewform" target="_blank" class="join-up btn-join">Join</a>
     </header>
     <!-- header -->
 
@@ -61,14 +61,11 @@
             <span class="subtitle selection">The Student Union is responsible for creating and enriching student life by organizing social, cultural, recreational, and educational programs and services. It also builds community among students and other groups on campus, promotes student welfare, and advocates for student issues to the college administration.</span>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEQW2VcUJWUWFjW_B60yDAPdDgzdybJFrrDQEqmmXjeXEsnQ/viewform" target="_blank" class="btn-join join-down">Join</a>
             <div class="align-btn">
-                <a href="https://discord.gg/uWZQP7q3UJ" target="_blank" class="discord-down btn">
-                    <ion-icon name="logo-discord"></ion-icon>
+                <a href="https://www.instagram.com/rscoe_saint/" target="_blank" class="discord-down btn">
+                    <ion-icon name="logo-instagram"></ion-icon>
                 </a>
                 <a href="https://github.com/coptit" class="github-down btn">
-                    <ion-icon name="logo-github"></ion-icon>
-                </a>
-                <a href="https://coptit.contest.codeforces.com" class="codeforces-down btn">
-                    <ion-icon name="code-slash-outline"></ion-icon>
+                    <ion-icon name="link-outline"></ion-icon>
                 </a>
             </div>
         </div>
