Linkedin page added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li class="codeforces-up">
-                  <a href="">
+                  <a href="https://www.linkedin.com/company/students-association-of-information-technology-department-saint/about/?viewAsMember=true" target="_blank">
                       <ion-icon name="link-outline"></ion-icon>
                   </a>
                 </li>
@@ -64,7 +64,7 @@
                 <a href="https://www.instagram.com/rscoe_saint/" target="_blank" class="discord-down btn">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="https://github.com/coptit" class="github-down btn">
+                <a href="https://www.linkedin.com/company/students-association-of-information-technology-department-saint/about/?viewAsMember=true" target="_blank" class="github-down btn">
                     <ion-icon name="link-outline"></ion-icon>
                 </a>
             </div>
